em2ds/simulation.h

typedef struct {

	// Time step
	float dt;
	float tmax;

	// Diagnostic frequency
	int ndump;

	// Simulation data
	int n_species;
	t_species* species;
	t_emf emf;
	t_current current;
	t_charge charge;


} t_simulation;
void sim_iter( t_simulation* sim );
void sim_report_energy( t_simulation* sim );
void sim_add_laser( t_simulation* sim,  t_emf_laser* laser );
void sim_add_neutral_bkg( t_simulation* sim );
void sim_new( t_simulation* sim, const int nx[], float box[], float dt, float tmax, int ndump, t_species* species, int n_species );
void sim_add_laser( t_simulation* sim,  t_emf_laser* laser );
void sim_delete( t_simulation* sim );